# unlocker-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  final_test.txt  lock_file.py  lock_test.ps1  windows_test_file.txt
.github/workflows/: build.yml
src/: main.rs
